Fixed #24784 -- Fixed visibility regression in admin's FK widget.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -93,6 +93,7 @@ form .aligned table p {
 }
 
 form .aligned p.help {
+    clear: left;
     padding-left: 38px;
 }
 
